// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish-document should handle publishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`publish-document should publish a valid document 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
